--- a/render.yaml
+++ b/render.yaml
@@ -5,11 +5,11 @@ services:
     region: oregon
     plan: free
     branch: main
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend/app && uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: cd backend && pip install -r requirements.txt
+    startCommand: cd backend/app && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.0
       - key: BASE_URL
-        sync: false
+        value: https://formulariosfsd.vercel.app
     healthCheckPath: /api/health
