Update Pillow version for Python 3.13 compatibility

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.27.1
 pydantic==2.6.1
 pydantic-settings==2.1.0
 python-multipart==0.0.9
-Pillow==10.2.0
+Pillow>=10.3.0
 python-dotenv==1.0.1
 slowapi==0.1.9
 qrcode[pil]==7.4.2
