--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.110.0
-uvicorn[standard]==0.27.1
-pydantic==2.6.1
-pydantic-settings==2.1.0
-python-multipart==0.0.9
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+pydantic>=2.10.0
+pydantic-settings>=2.6.0
+python-multipart>=0.0.9
 Pillow>=10.3.0
-python-dotenv==1.0.1
-slowapi==0.1.9
-qrcode[pil]==7.4.2
+python-dotenv>=1.0.1
+slowapi>=0.1.9
+qrcode[pil]>=7.4.2
