--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,19 @@
     "format": "prettier --write src/**/*.{js,jsx,css}"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
-    "axios": "^1.6.7",
-    "react-signature-canvas": "^1.0.6",
-    "date-fns": "^3.3.1"
+    "react-signature-canvas": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.1.0",
     "eslint": "^8.56.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "vite": "^5.1.0"
   }
 }
