chore: guardar cambios

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,29 +1,25 @@
-# Base
-BASE_URL=http://localhost:3000
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
+
+# API
 API_HOST=0.0.0.0
 API_PORT=8000
 
-# Seguridad
-JWT_SECRET=your-super-secret-jwt-key-change-this
-JWT_ALGORITHM=HS256
-JWT_EXPIRATION=1440
-
-# Azure AD Authentication
-AZURE_TENANT_ID=your_tenant_id
-AZURE_CLIENT_ID=your_client_id
-AZURE_CLIENT_SECRET=your_client_secret
-AZURE_REDIRECT_URI=http://localhost:3000/auth/callback
-AZURE_AUTHORITY=https://login.microsoftonline.com/your_tenant_id
-AZURE_SCOPE=["User.Read"]
-
-# Modo de autenticación (dev o production)
-AUTH_MODE=dev
-
-# Base de datos (futuro)
-DATABASE_URL=sqlite:///./capacitaciones.db
+# Microsoft Entra ID (Azure AD)
+ENTRA_CLIENT_ID=your_client_id_here
+ENTRA_TENANT_ID=your_tenant_id_here
+ENTRA_REDIRECT_URI=http://localhost:5173/login
+ENTRA_CLIENT_SECRET=
 
 # Configuración
 ALLOWED_DOMAIN=@fundacionsantodomingo.org
 TOKEN_EXPIRY_DAYS=30
 MAX_FILE_SIZE=1048576
-UPLOAD_DIR=./uploads/firmas
+
+# Modo de almacenamiento: "json" o "cosmosdb"
+STORAGE_MODE=json
+
+# CosmosDB (solo si STORAGE_MODE=cosmosdb)
+COSMOS_ENDPOINT=
+COSMOS_KEY=
+COSMOS_DATABASE_NAME=formaciones_db
