--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __pycache__/
 .Python
 env/
 venv/
+.venv/
 ENV/
 backend/venv/
 
@@ -31,6 +32,7 @@ Thumbs.db
 
 # Environment variables
 .env
+backend/.env
 .env.local
 .env.production
 
@@ -49,5 +51,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Vercel
-.vercel
