--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,9 @@ python-dotenv>=1.0.1
 slowapi>=0.1.9
 qrcode[pil]>=7.4.2
 azure-cosmos>=4.5.0
+msal>=1.24.0
+httpx>=0.24.0
+pytz>=2024.1
+azure-storage-blob>=12.19.0
+pytz>=2023.3
+azure-storage-blob>=12.19.0
