--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,5 @@
+# Backend API URL
 VITE_API_URL=http://localhost:8000
-VITE_AZURE_CLIENT_ID=your_client_id
-VITE_AZURE_TENANT_ID=your_tenant_id
-VITE_AZURE_REDIRECT_URI=http://localhost:3000/auth/callback
+
+# NOTA: No pongas credenciales de Azure aquí
+# El backend las expone de forma segura a través de /api/auth/config
