Implementar sistema completo de gestión de usuarios, roles y permisos
- Backend: Endpoints y servicios para usuarios, permisos y roles
- Frontend: Componentes de configuración con tabs para permisos y usuarios
- Sistema de permisos granular basado en roles (Usuario, Editor, Administrador)
- Página de acceso denegado con diseño mejorado
- Scripts de migración y administración de usuarios
- Dockerfiles y docker-compose para despliegue
- Utilidades de autenticación y permisos en frontend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,9 @@ ENTRA_TENANT_ID=your_tenant_id_here
 ENTRA_REDIRECT_URI=http://localhost:5173/login
 ENTRA_CLIENT_SECRET=
 
+# Session Secret (OBLIGATORIO) - Genera uno con: python -c "import secrets; print(secrets.token_urlsafe(32))"
+SESSION_SECRET=your_secret_key_here_minimum_32_characters
+
 # Configuración
 ALLOWED_DOMAIN=@fundacionsantodomingo.org
 TOKEN_EXPIRY_DAYS=30
