feat: Migración a Azure Blob Storage con estructura organizada
- Reestructuración de Azure Storage: Creador/Capacitacion/QR y Creador/Capacitacion/Firmas/
- Implementado proxy en backend para evitar problemas de CORS
- Códigos QR ahora usan solo los generados en backend (eliminada duplicación en frontend)
- Firmas guardadas con cédula en lugar de nombre para prevenir sobrescrituras
- Agregado borrado en cascada: eliminar capacitación borra toda la carpeta
- Corregida funcionalidad de descarga de códigos QR
- Actualizado .env.example con configuración de Azure Storage
- Agregados scripts de utilidad para gestión de blobs en Azure (listar/eliminar)
- Seguridad: Todas las credenciales protegidas, tokens SAS nunca expuestos al cliente

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,3 +26,13 @@ STORAGE_MODE=json
 COSMOS_ENDPOINT=
 COSMOS_KEY=
 COSMOS_DATABASE_NAME=formaciones_db
+
+# Modo de almacenamiento de blobs (QR, firmas): "local" o "azure"
+# local = sistema de archivos local
+# azure = Azure Blob Storage
+BLOB_STORAGE_MODE=local
+
+# Azure Blob Storage (solo si BLOB_STORAGE_MODE=azure)
+# Formato: DefaultEndpointsProtocol=https;AccountName=xxx;AccountKey=xxx;EndpointSuffix=core.windows.net
+AZURE_STORAGE_CONNECTION_STRING=
+
